# too-many-containers

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json
docs/: README.md
docs/dev/: file_structure.md  git_workflow.md  links_and_sources.md
docs/dev/templates/: _header_.hpp  _test_.cpp
include/tmc/: config.hpp  version.hpp
include/tmc/concept/: container.hpp  has_at.hpp  has_bracket_operator.hpp  has_clear.hpp  has_contains.hpp  has_count.hpp  has_dereference_operator.hpp  has_emplace.hpp  has_emplace_back.hpp  has_emplace_front.hpp  has_empty.hpp  has_equal_range.hpp  has_erase.hpp  has_find.hpp  has_insert.hpp  has_is_avalanching.hpp  has_is_transparent.hpp  has_pop.hpp  has_pop_back.hpp  has_pop_front.hpp  has_push.hpp  has_push_back.hpp  has_push_front.hpp  has_reserve.hpp  has_resize.hpp  has_size.hpp  has_try_emplace.hpp  is_aggregate.hpp  is_arithmetic.hpp  is_array.hpp  is_bool_testable.hpp  is_const_reference.hpp  is_cv_unqualified.hpp  is_enum.hpp  is_hash_for.hpp  is_lvalue_reference.hpp  is_non_array.hpp  is_non_void.hpp  is_reference.hpp  is_rvalue_reference.hpp  (+4 more)
include/tmc/concurrency/: locked_ref.hpp
include/tmc/container/: optional.hpp  span.hpp  vector.hpp
include/tmc/detail/: allocator_traits.hpp
include/tmc/error/: assert.hpp  exception.hpp  source_location.hpp
include/tmc/exception/: formattable_exception.hpp  runtime_error.hpp
include/tmc/functional/: approx.hpp  (+17 more)
tests/: CMakeLists.txt
tests/include/common/: framework.hpp
tests/source/: main.cpp
tests/source/concept/: has_is_transparent.cpp
tests/source/concurrency/: locked_ref.cpp
tests/source/functional/: approx.cpp  compare.cpp  singular_closure.cpp  variadic_closure.cpp
tests/source/iterator/: back_emplace_iterator.cpp  back_emplacer.cpp
tests/source/numeric/: approx.cpp  isfinite.cpp
tests/source/structure/: allocation_ptr.cpp
(+53 files in other folders)
